fix: stretch external field table to width of modal

--- a/packages/core/components/ExternalInput/styles.module.css
+++ b/packages/core/components/ExternalInput/styles.module.css
@@ -77,6 +77,7 @@
   color: var(--puck-color-neutral-4);
   position: relative;
   z-index: 0;
+  min-width: 100%;
 }
 
 .ExternalInputModal-thead {
